--- a/pipa.toml
+++ b/pipa.toml
@@ -10,3 +10,4 @@ redis_read_timeout = 5
 redis_write_timeout = 5
 redis_pool_max_idle = 300
 redis_pool_idle_timeout = 30
+redis_set_data_max_time = 1000000
