Add a fuse mechanism when connecting a single redis instance, and can try to restart within a certain time

--- a/package/pipa.service
+++ b/package/pipa.service
@@ -10,7 +10,9 @@ LimitNOFILE=65535
 Environment=LD_LIBRARY_PATH=/lib:/usr/lib:/usr/local/lib:/root/opt/lib
 Type=simple
 ExecStart=/usr/bin/pipa
+ExecStartPre=source /etc/profile
 ExecStop=/usr/bin/kill $MAINPID
+RestartSec=5
 Restart=always
 
 [Install]
